tests/NormalTests/paczka1/fuzzy1/87067618.err
Error in line 1: S106 S106 63,6
Error in line 17: S106 S370 99,1
Error in line 16: GbR S370 17,5
Error in line 31: BCcOLWB S370 57,2
Error in line 10: foa9 S106 60,4
